--- a/app/src/main/res/layout/activity_submission.xml
+++ b/app/src/main/res/layout/activity_submission.xml
@@ -7,12 +7,28 @@
     android:background="@drawable/background"
     tools:context=".SubmissionActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/gads_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/gads_header"
+        android:minHeight="?attr/actionBarSize"
+        app:layout_constraintBottom_toTopOf="@id/text_submission"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/AppTheme.NoActionBar">
+
+    </androidx.appcompat.widget.Toolbar>
+
     <TextView
         android:id="@+id/text_submission"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="128dp"
         android:text="@string/project_submission"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
@@ -22,13 +38,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/text_submission_line"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/gradient"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_submission" />
+
     <EditText
         android:id="@+id/text_firstname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="4dp"
+        android:autofillHints=""
         android:background="@drawable/rounded_edit_text"
         android:ems="10"
         android:hint="@string/first_name"
@@ -41,16 +70,16 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/text_lastname"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_submission"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/text_submission" />
 
     <EditText
         android:id="@+id/text_lastname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="8dp"
+        android:autofillHints=""
         android:background="@drawable/rounded_edit_text"
         android:ems="10"
         android:hint="@string/last_name"
@@ -64,8 +93,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/text_firstname"
-        app:layout_constraintTop_toBottomOf="@+id/text_submission"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/text_submission" />
 
     <EditText
         android:id="@+id/text_email_address"
